--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
+  <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
+<style>body{--text-color:#222;--bkg-color:#fff;--btn-txt-color:white;--btn-bg-color:rgb(9, 49, 87);--inp-bg-color:lightgray}body{background:var(--bkg-color)}</style><link rel="stylesheet" href="styles.a0104ff626528794.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.a0104ff626528794.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="runtime.cfecc6cee5097d23.js" type="module"></script><script src="polyfills.2ff497b8939a8171.js" type="module"></script><script src="main.fe2909defa2faea0.js" type="module"></script>
+<script src="runtime.cfecc6cee5097d23.js" type="module"></script><script src="polyfills.784c29cf73a1390d.js" type="module"></script><script src="main.cde1938082439eea.js" type="module"></script>
 
 </body></html>
